# quant-finance-flash-cards

./: .claudeignore  .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  GEMINI.md  README.md  TO_DO.md  edges.json  key-terms.json  launch_app.bat  launch_app.sh  notation.json  pyproject.toml  resources.json  run.py
.claude/: settings.json
app/: __init__.py  db.py  loader.py  routes.py
app/static/: style.css
app/templates/: 404.html  base.html  card.html  disambiguate.html  formulas.html  graph.html  index.html  recent.html  tag.html
cards/banking-regulation/: backtesting-var.md  basel-iii-three-pillars.md  basel-iv-output-floor.md  basis-risk-banking-book.md  capital-ratios-cet1.md  ccp-loss-waterfall.md  clearing-economics.md  close-out-netting.md  close-out-valuation.md  collateral-transformation.md  credit-loss-distribution.md  credit-value-adjustment-cva.md  curvature-risk-charge.md  cva-desk-hedging.md  default-risk-charge.md  dva.md  earnings-at-risk.md  economic-value-of-equity.md  expected-exposure.md  expected-loss.md  frtb-overview.md  frtb-sensitivity-based-method.md  fva.md  gsib-surcharge.md  interest-rate-risk-in-the-banking-book.md  interest-rate-tenor-vertices.md  irb-approach.md  isda-simm.md  leverage-ratio.md  liquidity-adjusted-var.md  liquidity-buffer-composition.md  liquidity-coverage-ratio.md  mva.md  (+19 more)
scripts/: check_youtube.py  clean_resources.py  install_hooks.sh  update_readme_stats.py  validate_urls.py
tests/: conftest.py  test_date_filtering.py  test_formulas.py  test_graph.py  test_loader.py  test_search.py
(+1234 files in other folders)
